--- a/ibm-hc.yaml
+++ b/ibm-hc.yaml
@@ -68,7 +68,7 @@ environment:
 
   override_attributes:
     # (Optional) Add Override Environment Attributes
-    ntp.servers: 
+    ntp.servers: >
       '[0.pool.ntp.org, 1.pool.ntp.org, 2.pool.ntp.org, 3.pool.ntp.org]'
 
 # ================================================================
